# pyproject.toml

[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "darktable-python"
version = "0.5.1"
description = ""
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
  {name = "Jonas van den Berg"},
  {name = "Alejandro Roldán", email = "alej_roldan@disr.it"}
]
maintainers = [
  {name = "Alejandro Roldán", email = "alej_roldan@disr.it"}
]

requires-python = ">=3.12"
dependencies = [
	"exif >= 1.6.0",
	"pillow >= 10.4.0",
	"plum-py >= 0.8.7",
	"python-dateutil >= 2.9.0.post0",
	"simple_cache >= 0.35",
	"six >= 1.16.0",
	"xmltodict >= 0.14.2"
]

[project.optional-dependencies]
lint = [
	"black >= 24.8.0",
    "isort >= 5.13.0",
	"flake8 >= 7.1.0"
]
dev = [
	"darktable-python[lint]"
]

[project.scripts]
darktable_db_inconsistencies = "database_inconsistencies:main"

[project.urls]
Homepage = "https://github.com/Alejandro-Roldan/darktable-python"
Repository = "https://github.com/Alejandro-Roldan/darktable-python"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
profile = "black"
skip_gitignore = true
